[package]
name = "sensor-constant-score"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "V5-SDK-1 reference example: smallest-possible third-party Sensor depending only on neurogrim-sdk."
publish = false

[lib]

[dependencies]
# CRITICAL: this example depends ONLY on neurogrim-sdk — NOT
# neurogrim-core directly. That's the modularity claim V5-SDK-1
# proves: third-party plugin authors get a stable contract surface
# without coupling to internal NeuroGrim crates.
neurogrim-sdk = { path = "../../crates/neurogrim-sdk" }

# `#[async_trait]` macro for the Sensor impl. Same convention as
# every built-in sensor.
async-trait = { workspace = true }

# `anyhow::Result` is the trait method's return type.
anyhow = { workspace = true }

# CMDB envelope construction.
serde_json = { workspace = true }

# RFC3339 timestamps.
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
