[package]
name = "sensor-constant-score"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "V5-SDK-1 reference example: smallest-possible third-party Sensor depending only on neurogrim-sdk."
publish = false

[lib]

[dependencies]
# CRITICAL: this example depends ONLY on neurogrim-sdk — NOT
# neurogrim-core directly. That's the modularity claim V5-SDK-1
# proves: third-party plugin authors get a stable contract surface
# without coupling to internal NeuroGrim crates.
neurogrim-sdk = { path = "../../crates/neurogrim-sdk" }

# `#[async_trait]` macro for the Sensor impl. Same convention as
# every built-in sensor.
async-trait = { workspace = true }

# `anyhow::Result` is the trait method's return type.
anyhow = { workspace = true }

# CMDB envelope construction.
serde_json = { workspace = true }

# RFC3339 timestamps.
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
# V5-SDK-2 partial Phase 3 (2026-05-04) — `tests/conformance.rs:11`
# imports `neurogrim_sdk::sensor_conformance::run_factory_conformance`,
# which is now feature-gated (V5-SDK-2 Phase 2). Activate at
# test-build time only via `[dev-dependencies]` so production
# `cargo build -p sensor-constant-score` stays tokio-clean. Cargo
# unifies feature spec across the `[dependencies]` (no features) and
# `[dev-dependencies]` (features=conformance) entries — the test
# build sees both, the lib build sees only the former.
neurogrim-sdk = { path = "../../crates/neurogrim-sdk", features = ["conformance"] }
